--- a/pages/task/published/published.wxml
+++ b/pages/task/published/published.wxml
@@ -1,7 +1,6 @@
 <view class='topTabSwiper'>
     <view class='tab  {{currentData == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>未被接受</view>
     <view class='tab  {{currentData == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>已被接受</view>
-    <view class='tab  {{currentData == 2 ? "tabBorer" : ""}}'  data-current = "2" bindtap='checkCurrent'>已取消</view>
 </view>
 
 <swiper current="{{currentData}}" class='swiper' style="height:600px;" duration="300" bindchange="bindchange">
@@ -12,7 +11,7 @@
       
         <view class="section" style="padding: 15px;">
           <i-panel class="cell-panel-demo">
-            <i-cell title="{{item.title}}" label="{{item.fromLocation}}" value="{{item.TimeLimit}}" is-link></i-cell>
+            <i-cell title="{{item.title}}" label="{{item.from}}" value="{{item.state}}" is-link></i-cell>
           </i-panel>
         </view>
       </navigator>
@@ -26,7 +25,7 @@
       
         <view class="section" style="padding: 15px;">
           <i-panel class="cell-panel-demo">
-            <i-cell title="{{item.title}}" label="{{item.fromLocation}}" value="{{item.TimeLimit}}" is-link></i-cell>
+            <i-cell title="{{item.title}}" label="{{item.from}}" value="{{item.state}}" is-link></i-cell>
           </i-panel>
         </view>
 
