--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,8 @@
 <!--index.wxml-->
 <view class='topTabSwiper'>
-    <view class='tab  {{currentData == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>分类1</view>
-    <view class='tab  {{currentData == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>分类2</view>
-    <view class='tab  {{currentData == 2 ? "tabBorer" : ""}}'  data-current = "2" bindtap='checkCurrent'>分类3</view>
+    <view class='tab  {{currentData == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>任务广场</view>
+    <view class='tab  {{currentData == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>其他广场</view>
+    <view class='tab  {{currentData == 2 ? "tabBorer" : ""}}'  data-current = "2" bindtap='checkCurrent'>其他广场</view>
 </view>
 
 <swiper current="{{currentData}}" class='swiper' style="height:600px;" duration="300" bindchange="bindchange">
@@ -23,8 +23,8 @@
 		  </view>
       
   </swiper-item>
-  <swiper-item><view class='swiper_con'>welcome come to 分类2</view></swiper-item>
-  <swiper-item><view class='swiper_con'>welcome come to 分类3</view></swiper-item>  
+  <swiper-item><view class='swiper_con'>welcome come to 其他广场</view></swiper-item>
+  <swiper-item><view class='swiper_con'>welcome come to 其他广场</view></swiper-item>  
 </swiper>
 
 
