--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -10,7 +10,7 @@
   height: 128rpx;
   margin: 20rpx;
   border-radius: 50%;
-  border: 2px solid #efefef;
+  border: 2px solid #aaa;
 }
 
 .userinfo-nickname {
