--- a/pages/mine/avator/avator.wxss
+++ b/pages/mine/avator/avator.wxss
@@ -2,7 +2,7 @@
   height: 300px;
   margin: 20rpx;
   border-radius: 50%;
-  border: 2px solid #efefef;
+  border: 2px solid #aaa;
 }
 .container{
   flex-direction: column;
