修改宿舍楼

--- a/pages/mine/information/display/information.wxml
+++ b/pages/mine/information/display/information.wxml
@@ -55,6 +55,15 @@
         </view>
       </view>
 
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">宿舍楼</view>
+        </view>
+        <view class="weui-cell__bd">
+          <view class="weui-input">{{myUserData.dormitory}}</view>
+        </view>
+      </view>
+
     </view>
 
     <navigator url="../edit/edit">
