--- a/pages/mine/information/edit/edit.wxml
+++ b/pages/mine/information/edit/edit.wxml
@@ -3,38 +3,73 @@
  <view class="modify-form">
    <form bindsubmit="formSubmit">
 
-       <view class="label-list">
-         <view class="label">昵称</view>
-         <input placeholder="请输入您的昵称"  placeholder-class="place" name="nickname" value="{{myUserData.nickname}}"/>
+       <view class="weui-cell weui-cell_input">
+         <view class="weui-cell__hd">
+           <view class="weui-label">昵称</view>
+         </view>
+         <view class="weui-cell__bd">
+           <input class="weui-input" value="{{myUserData.nickname}}" placeholder="请输入您的昵称" placeholder-class="place" name="nickname"/>
+         </view>
        </view>
 
-       <view class="label-list">
-         <view class="label">性别</view>
-         <radio-group name='sex'class="radio-group" bindchange="sexRadioChange">
-           <label class="radio" wx:for="{{sexItems}}" wx:key="{{index}}">
+       <view class="weui-cell weui-cell_input">
+         <view class="weui-cell__hd">
+           <view class="weui-label">性别</view>
+         </view>
+         <view class="weui-cell__bd">
+           <radio-group name='sex'class="radio-group" bindchange="sexRadioChange">
+           <label class="weui-input" wx:for="{{sexItems}}" wx:key="{{index}}">
              <radio value="{{item.value}}" checked="{{item.checked}}"/>{{item.value}}
            </label>
-         </radio-group>
-       </view>
-         
-       <view class="label-list">
-         <view class="label">E-mail</view>
-         <input placeholder="请输入您的E-mail" value='{{myUserData.mail}}' placeholder-class="place" name="mail"/>
+            </radio-group>
+         </view>
        </view>
 
-       <view class="label-list">
-         <view class="label">手机号</view>
-         <input value="{{myUserData.phoneNumber}}"   placeholder-class="place" name="phoneNumber"/>
+       <view class="weui-cell weui-cell_input">
+         <view class="weui-cell__hd">
+           <view class="weui-label">E-mail</view>
+         </view>
+         <view class="weui-cell__bd">
+           <input class="weui-input" value="{{myUserData.mail}}"   placeholder-class="place" name="mail"/>
+         </view>
        </view>
 
-       <view class="label-list">
-         <view class="label">学号</view>
-         <input value="{{myUserData.studentID}}"   placeholder-class="place" name="studentID"/>
+       <view class="weui-cell weui-cell_input">
+         <view class="weui-cell__hd">
+           <view class="weui-label">手机号</view>
+         </view>
+         <view class="weui-cell__bd">
+           <input class="weui-input" value="{{myUserData.phoneNumber}}"   placeholder-class="place" name="phoneNumber"/>
+         </view>
        </view>
 
-       <view class="label-list">
-         <view class="label">所在学院</view>
-         <input value="{{myUserData.department}}"   placeholder-class="place" name="department"/>
+       <view class="weui-cell weui-cell_input">
+         <view class="weui-cell__hd">
+           <view class="weui-label">学号</view>
+         </view>
+         <view class="weui-cell__bd">
+           <input class="weui-input" value="{{myUserData.studentID}}"   placeholder-class="place" name="studentID"/>
+         </view>
+       </view>
+
+       <view class="weui-cell weui-cell_input">
+         <view class="weui-cell__hd">
+           <view class="weui-label">所在学院</view>
+         </view>
+         <view class="weui-cell__bd">
+           <input class="weui-input" value="{{myUserData.department}}"   placeholder-class="place" name="department"/>
+         </view>
+       </view>
+
+       <view class="weui-cell weui-cell_input">
+         <view class="weui-cell__hd">
+           <view class="weui-label">宿舍楼</view>
+         </view>
+         <view class="weui-cell__bd">
+           <picker value="{{index}}" range="{{array}}" bindchange="bindDateChange">
+             <view class="weui-input">{{array[index]}}</view>
+           </picker>
+         </view>
        </view>
 
        <button form-type='submit' class="submit">确定</button>
