--- a/pages/mine/information/edit/edit.wxml
+++ b/pages/mine/information/edit/edit.wxml
@@ -66,7 +66,7 @@
            <view class="weui-label">宿舍楼</view>
          </view>
          <view class="weui-cell__bd">
-           <picker value="{{array[index]}}" range="{{array}}" bindchange="bindDateChange"name="dormitory">
+           <picker value="{{index+1}}" range="{{array}}" bindchange="bindDateChange"name="communityID">
              <view class="weui-input">{{array[index]}}</view>
            </picker>
          </view>
