--- a/pages/tutorial/tutorial.wxml
+++ b/pages/tutorial/tutorial.wxml
@@ -1,7 +1,7 @@
 <view class='images'>
   <swiper class='detail-imgs' indicator-dots="{{true}}" interval="{{5000}}" duration="{{500}}" bindchange='bindchange' style="height:{{imgheights[current]}}rpx;">
     <block wx:for="{{imgUrls}}" wx:key="{{index}}">
-      <swiper-item style="">
+      <swiper-item>
         <image src="{{item}}" class='image-view' style="height:{{imgheights[current]}}rpx;width:{{imgwidth}}rpx;" bindload="imageLoad" data-src='{{item}}' data-index='{{index}}'></image>
       </swiper-item>
     </block>
